--- a/appspec.yml
+++ b/appspec.yml
@@ -17,6 +17,11 @@ permissions:
 
 hooks:
 
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
+      runas: root
+
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
